# engineer1-website

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: engineer1-build.yml
docs/: allyship.md  architecture.md  communication.md  contact.md  donate.md  engineer1-lab.md  finance.md  hardware-kits.md  index.md  infrastructure.md  intellectual-property.md  labs.md  license.md  remote-communication.md  renewable-energy.md  sessions.md
engineer1-website/: index.html
notes/: README.md
